--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,13 +5,11 @@ pool:
   vmImage: 'ubuntu-18.04'
 
 steps:
-- task: katalonTask@1
-  inputs:
-    version: '8.2.5'
-    executeArgs: '-testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -apiKey=554d7f82-ac15-4b60-aab3-739c97658f70 --config -webui.autoUpdateDrivers=true'
-    xvfbConfiguration: '-a -n 0 -s "-screen 0 1024x768x24"'
+- script: docker pull katalonstudio/katalon
+  displayName: 'Pull katalon studio images'
+- script: docker run -t --rm -v "$(pwd)":/katalon/katalon/source katalonstudio/katalon katalon-execute.sh -browserType="Chrome" -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Web"
+  displayName: 'Runnning Katalon TS_RegressionTest'
 - task: PublishPipelineArtifact@0
   inputs:
     artifactName: 'JUnit Report' 
     targetPath: report/
-    
