--- a/console.properties
+++ b/console.properties
@@ -14,7 +14,7 @@ testOpsReleaseId=
 testcloudAppId=
 testOpsBuildId=
 qTestDestId=
-appiumDirectory=
+appiumDirectory=/usr/local/lib/node_modules/appium
 qTestDestType=
 testcloudEnvironmentId=
 testcloudEnvironmentID=
