--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,12 +5,21 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: docker pull katalonstudio/katalon
-  displayName: 'Pull katalon studio images'
+- checkout: self
 
-- script: docker run -t --rm -v "$(pwd)":/katalon/katalon/source katalonstudio/katalon apt-get install -y git-core curl build-essential openssl libssl-dev  && git clone https://github.com/nodejs/node.git && cd node  && ./configure  && make  && sudo make install katalon-execute.sh -browserType="Android" -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Mobile" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -webui.autoUpdateDrivers=true
-  displayName: 'Runnning Katalon TS_RegressionTest'
-- task: PublishPipelineArtifact@0
+- task: Docker@2
+  displayName: 'Build Docker image'
   inputs:
-    artifactName: 'JUnit Report' 
-    targetPath: report/
+    repository: '$(Build.Repository.Name)'
+    command: 'build'
+    Dockerfile: '**/Dockerfile'
+    tags: |
+      $(Build.BuildId)
+
+- script: |
+    docker run -d --name android_emulator -v $(System.DefaultWorkingDirectory):/workspace 
+  displayName: 'Run Android emulator in Docker container'
+
+- script: |
+    docker exec android_emulator adb devices
+  displayName: 'Run Android tests'
