--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
       $(Build.BuildId)
 
 - script: |
-    docker run -d --name android_emulator -v $(System.DefaultWorkingDirectory):/workspace 
+    docker run -d --name android_emulator -v $(System.DefaultWorkingDirectory):/workspace docker.io/bktpay/katalon-test:16201
   displayName: 'Run Android emulator in Docker container'
 
 - script: |
