--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,4 @@
+
 trigger:
 - master
 
@@ -25,4 +26,5 @@ steps:
     docker exec android_emulator adb wait-for-device
     docker exec android_emulator adb shell input keyevent 82
     docker exec android_emulator adb devices
+    docker run -t --rm -v ${pwd}:/tmp/project katalonstudio/katalon katalonc.sh -noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"
   displayName: 'Run Android tests'
