--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
       $(Build.BuildId)
 
 - script: |
-    docker run -d -v "$(pwd)":/tmp/project docker.io/bktpay/katalon-test:$(Build.BuildId) katalonc.sh -projectPath=/tmp/project -noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true 
+    docker run -t --rm -v "$(pwd)":/tmp/project docker.io/bktpay/katalon-test:$(Build.BuildId) katalonc.sh -projectPath=/tmp/project -noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true 
   displayName: 'Run'
 
