--- a/dockerfile2
+++ b/dockerfile2
@@ -32,7 +32,7 @@ RUN yes | sdkmanager --licenses
 
 # Create Android Virtual Device (AVD)
 RUN mkdir -p /root/.android && touch /root/.android/emu-update-last-check.ini \
-    && echo "no" | avdmanager create avd -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
+    && echo "no" | avdmanager create avd --force -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
   
 RUN adb devices
 # Copy entrypoint script
