--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
     tags: |
       $(Build.BuildId)
 - script: |
-    docker run -d --name android_emulator -v $(System.DefaultWorkingDirectory):/workspace docker.io/bktpay/katalon-test::$(Build.BuildId)
+    docker run -t --name android_emulator -v $(System.DefaultWorkingDirectory):/workspace docker.io/bktpay/katalon-test::$(Build.BuildId)
   displayName: 'Run Android emulator in Docker container'
