--- a/dockerfile2
+++ b/dockerfile2
@@ -1,5 +1,5 @@
 # Use the specific Katalon Docker image as the base
-FROM katalonstudio/katalon:8.6.0
+FROM katalonstudio/katalon
 
 # Install dependencies
 RUN apt-get update -y && apt-get install -y \
