--- a/dockerfile2
+++ b/dockerfile2
@@ -14,17 +14,17 @@ RUN npm install -g appium
 
 # Install Android command line tools
 RUN mkdir -p /opt/android-sdk/cmdline-tools
-WORKDIR /opt/android-sdk/cmdline-tools
+# WORKDIR /opt/android-sdk/cmdline-tools
 RUN wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O commandlinetools.zip \
     && unzip commandlinetools.zip \
     && mv cmdline-tools latest
 
 # Set environment variables
-ENV ANDROID_SDK_ROOT /opt/android-sdk
-ENV PATH $PATH:/opt/android-sdk/cmdline-tools/latest/bin
-ENV PATH $PATH:/opt/android-sdk/platform-tools
-ENV PATH $PATH:/opt/android-sdk/emulator
-ENV ANDROID_AVD_HOME /root/.android/avd
+# ENV ANDROID_SDK_ROOT /opt/android-sdk
+# ENV PATH $PATH:/opt/android-sdk/cmdline-tools/latest/bin
+# ENV PATH $PATH:/opt/android-sdk/platform-tools
+# ENV PATH $PATH:/opt/android-sdk/emulator
+# ENV ANDROID_AVD_HOME /root/.android/avd
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get install -y at-spi2-core
 RUN apt-get install -y libxkbcommon-x11-0
