--- a/dockerfile2
+++ b/dockerfile2
@@ -32,8 +32,8 @@ RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
 RUN apt-get install -y openjdk-17-jre
 # Install Android SDK packages
-RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
-RUN yes | sdkmanager --licenses
+RUN yes | /opt/android-sdk/cmdline-tools/sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
+RUN yes | /opt/android-sdk/cmdline-tools/sdkmanager --licenses
 
 # Create Android Virtual Device (AVD)
 RUN mkdir -p /root/.android && touch /root/.android/emu-update-last-check.ini \
