--- a/dockerfile2
+++ b/dockerfile2
@@ -37,7 +37,7 @@ RUN yes | /opt/android-sdk/cmdline-tools/sdkmanager --licenses
 
 # Create Android Virtual Device (AVD)
 RUN mkdir -p /root/.android && touch /root/.android/emu-update-last-check.ini \
-    && echo "no" | avdmanager create avd --force -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
+    && echo "no" | /opt/android-sdk/cmdline-tools/avdmanager create avd --force -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
   
 RUN adb devices
 # Copy entrypoint script
