--- a/dockerfile2
+++ b/dockerfile2
@@ -20,11 +20,11 @@ RUN wget https://dl.google.com/android/repository/commandlinetools-linux-9477386
     && mv cmdline-tools latest
 
 # Set environment variables
-# ENV ANDROID_SDK_ROOT /opt/android-sdk
+ ENV ANDROID_SDK_ROOT /opt/android-sdk
  ENV PATH $PATH:/opt/android-sdk/cmdline-tools/latest/bin
  ENV PATH $PATH:/opt/android-sdk/platform-tools
  ENV PATH $PATH:/opt/android-sdk/emulator
-# ENV ANDROID_AVD_HOME /root/.android/avd
+ ENV ANDROID_AVD_HOME /root/.android/avd
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get install -y at-spi2-core
 RUN apt-get install -y libxkbcommon-x11-0
@@ -32,12 +32,12 @@ RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
 RUN apt-get install -y openjdk-17-jre
 # Install Android SDK packages
-RUN yes | /opt/android-sdk/cmdline-tools/sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
-RUN yes | /opt/android-sdk/cmdline-tools/sdkmanager --licenses
+RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
+RUN yes | sdkmanager --licenses
 
 # Create Android Virtual Device (AVD)
 RUN mkdir -p /root/.android && touch /root/.android/emu-update-last-check.ini \
-    && echo "no" | /opt/android-sdk/cmdline-tools/avdmanager create avd --force -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
+    && echo "no" | avdmanager create avd --force -n test_avd -k "system-images;android-25;google_apis;armeabi-v7a" --device "Nexus 4"
   
 RUN adb devices
 # Copy entrypoint script
