--- a/dockerfile2
+++ b/dockerfile2
@@ -14,7 +14,7 @@ RUN npm install -g appium
 
 # Install Android command line tools
 RUN mkdir -p /opt/android-sdk/cmdline-tools
-# WORKDIR /opt/android-sdk/cmdline-tools
+WORKDIR /opt/android-sdk/cmdline-tools
 RUN wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O commandlinetools.zip \
     && unzip commandlinetools.zip \
     && mv cmdline-tools latest
@@ -32,7 +32,6 @@ RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
 RUN apt-get install -y openjdk-17-jre
 # Install Android SDK packages
-RUN cd /opt/android-sdk/cmdline-tools
 RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
 RUN yes | sdkmanager --licenses
 
