--- a/dockerfile2
+++ b/dockerfile2
@@ -1,5 +1,5 @@
 # Use the specific Katalon Docker image as the base
-FROM katalonstudio/katalon:7.7.0
+FROM katalonstudio/katalon
 
 
 # Install Node.js and npm
