--- a/dockerfile2
+++ b/dockerfile2
@@ -1,6 +1,8 @@
 # Use the specific Katalon Docker image as the base
 FROM katalonstudio/katalon
 
+RUN apt-get update -y && apt-get install -y \
+    wget unzip curl
 
 # Install Node.js and npm
 RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
