--- a/dockerfile2
+++ b/dockerfile2
@@ -2,7 +2,7 @@
 FROM katalonstudio/ubuntu-20.04
 
 RUN apt-get update -y && apt-get install -y \
-    wget unzip curl
+   openjdk-11-jdk wget unzip curl
 
 # Install Node.js and npm
 RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
