--- a/dockerfile2
+++ b/dockerfile2
@@ -1,5 +1,5 @@
 # Use the specific Katalon Docker image as the base
-FROM katalonstudio/katalon
+FROM katalonstudio/katalon:7.7.0
 
 RUN apt-get update -y && apt-get install -y \
    openjdk-11-jdk wget unzip curl
