--- a/dockerfile2
+++ b/dockerfile2
@@ -29,7 +29,7 @@ RUN apt-get install -y at-spi2-core
 RUN apt-get install -y libxkbcommon-x11-0
 RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
-RUN apt-get install -y openjdk-17-jdk
+RUN apt install openjdk-17-jdk-headless
 # Install Android SDK packages
 RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
 RUN yes | sdkmanager --licenses
