--- a/dockerfile2
+++ b/dockerfile2
@@ -2,7 +2,7 @@
 FROM katalonstudio/katalon:8.5.0
 
 RUN apt-get update -y && apt-get install -y \
-   openjdk-8-jdk wget unzip curl
+    wget unzip curl
 
 # Install Node.js and npm
 RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - \
@@ -29,7 +29,6 @@ RUN apt-get install -y at-spi2-core
 RUN apt-get install -y libxkbcommon-x11-0
 RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
-RUN apt-get install -y openjdk-17-jdk
 # Install Android SDK packages
 RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
 RUN yes | sdkmanager --licenses
