Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,6 @@ steps:
 - task: PublishPipelineArtifact@1
   condition: succeededOrFailed() 
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: '/test'
     publishLocation: 'pipeline'
     
