--- a/settings/internal/com.kms.katalon.core.mobile.android.properties
+++ b/settings/internal/com.kms.katalon.core.mobile.android.properties
@@ -1,1 +1,1 @@
-{"ANDROID_DRIVER":{"deviceId":"","androidInstallTimeout":120000.0}}
+{"ANDROID_DRIVER":{"deviceId":"","androidInstallTimeout":120000.0,"avdLaunchTimeout":120000.0}}
