--- a/dockerfile2
+++ b/dockerfile2
@@ -1,5 +1,5 @@
 # Use the specific Katalon Docker image as the base
-FROM katalonstudio/katalon:9.0.0
+FROM katalonstudio/katalon:9.6.0
 
 RUN apt-get update -y && apt-get install -y \
     wget unzip curl
@@ -10,6 +10,8 @@ RUN curl -sL https://deb.nodesource.com/setup_20.x | bash - \
 
 # Install Appium
 RUN npm install -g appium
+npm install -g appium-doctor
+appium-doctor
 
 # Install Android command line tools
 RUN mkdir -p /opt/android-sdk/cmdline-tools
