--- a/dockerfile2
+++ b/dockerfile2
@@ -1,5 +1,5 @@
 # Use the specific Katalon Docker image as the base
-FROM katalonstudio/katalon:9.6.0
+FROM katalonstudio/katalon:9.0.0
 
 RUN apt-get update -y && apt-get install -y \
     wget unzip curl
@@ -9,7 +9,7 @@ RUN curl -sL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs
 
 # Install Appium
-RUN npm install -g appium
+RUN npm install -g appium@1.22.3
 RUN npm install -g appium-doctor
 RUN appium-doctor
 
