--- a/dockerfile2
+++ b/dockerfile2
@@ -9,7 +9,7 @@ RUN curl -sL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs
 
 # Install Appium
-RUN npm install -g appium@1.22.1
+RUN npm install -g appium
 
 # Install Android command line tools
 RUN mkdir -p /opt/android-sdk/cmdline-tools
