--- a/dockerfile2
+++ b/dockerfile2
@@ -28,6 +28,7 @@ RUN apt-get install -y at-spi2-core
 RUN apt-get install -y libxkbcommon-x11-0
 RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
+RUN apt-get install -y libqt5widgets5
 # Install Android SDK packages
 RUN yes | sdkmanager --install "platform-tools" "platforms;android-25" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
 RUN yes | sdkmanager --licenses
