--- a/dockerfile2
+++ b/dockerfile2
@@ -2,7 +2,21 @@
 FROM katalonstudio/katalon:9.0.0
 
 RUN apt-get update -y && apt-get install -y \
-    wget unzip curl
+    wget unzip curl \
+     libgl1-mesa-dev \
+    libx11-dev \
+    libxkbcommon-x11-0 \
+    libxrender1 \
+    libxtst6 \
+    libxi6 \
+    xvfb \
+    libnss3 \
+    libgdk-pixbuf2.0-0 \
+    libatk-bridge2.0-0 \
+    libgtk-3-0 \
+    libasound2 \
+    libgbm1 \
+    libpango-1.0-0
 
 # Install Node.js and npm
 RUN curl -sL https://deb.nodesource.com/setup_20.x | bash - \
