--- a/settings/internal/com.kms.katalon.core.mobile.android.properties
+++ b/settings/internal/com.kms.katalon.core.mobile.android.properties
@@ -1,1 +1,1 @@
-{"ANDROID_DRIVER":{"deviceId":"emulator-5554","androidInstallTimeout":120000.0,"avdLaunchTimeout":120000.0,"uninstallAfterCloseApp":false,"appWaitActivity":"*","uiautomator2ServerInstallTimeout":500000,"adbExecTimeout":200000.0}}
+{"ANDROID_DRIVER":{"deviceId":"emulator-5554","appium:commandTimeout":90000,"commandTimeout":95000,"androidInstallTimeout":120000.0,"avdLaunchTimeout":120000.0,"uninstallAfterCloseApp":false,"appWaitActivity":"*","uiautomator2ServerInstallTimeout":500000,"adbExecTimeout":200000.0}}
