--- a/dockerfile2
+++ b/dockerfile2
@@ -9,6 +9,7 @@ RUN apt-get update -y && apt-get install -y \
     libxrender1 \
     libxtst6 \
     libxi6 \
+    mesa-utils \
     xvfb \
     libnss3 \
     libgdk-pixbuf2.0-0 \
