--- a/dockerfile2
+++ b/dockerfile2
@@ -17,6 +17,8 @@ RUN apt-get update -y && apt-get install -y \
     libgtk-3-0 \
     libasound2 \
     libgbm1 \
+    libgl1-mesa-glx \
+    libgl1-mesa-dri \
     libpango-1.0-0
 
 # Install Node.js and npm
