--- a/dockerfile2
+++ b/dockerfile2
@@ -26,7 +26,7 @@ RUN curl -sL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs
 
 # Install Appium
-RUN npm install -g appium --a
+RUN npm install -g appium --allow-root
 
 # Install Android command line tools
 RUN mkdir -p /opt/android-sdk/cmdline-tools
