--- a/dockerfile2
+++ b/dockerfile2
@@ -47,7 +47,7 @@ RUN apt-get install -y xorg
 RUN apt-get install -y xvfb
 RUN apt-get install -y libqt5widgets5
 # Install Android SDK packages
-RUN yes | sdkmanager --install "platform-tools" "platforms;android-35" "system-images;android-25;google_apis;armeabi-v7a"
+RUN yes | sdkmanager --install "platform-tools" "platforms;android-35" "system-images;android-25;google_apis;armeabi-v7a" "emulator"
 RUN yes | sdkmanager --licenses
 
 # Create Android Virtual Device (AVD)
