--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,39 @@
-
 trigger:
-- master
+  - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+jobs:
+  - job: macOS
+    pool:
+      vmImage: macOS-latest
+      
+    steps:
 
-steps:
-- checkout: self
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '16.x'
+        displayName: 'Install Node.js'
 
-- task: Docker@2
-  displayName: 'Build Docker image'
-  inputs:
-    repository: '$(Build.Repository.Name)'
-    command: 'build'
-    Dockerfile: '**/dockerfile2'
-    tags: |
-      $(Build.BuildId)
-- script: |
-    docker run -t --rm -v $(pwd):/tmp/project docker.io/bktpay/katalon-test:$(Build.BuildId) katalonc.sh -noSplash -runMode=console -projectPath=/tmp/project -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f40e6675-f266-4c69-a67b-1637d512d361" -appiumDirectory="/usr/local/lib/node_modules/appium"
- 
-  displayName: 'Run Android emulator in Docker container'
-- task: PublishPipelineArtifact@1
-  condition: succeededOrFailed() 
-  inputs:
-    targetPath: '$(Pipeline.Workspace)'
-    publishLocation: 'pipeline'
-    
+      - script: |
+          $ANDROID_HOME/tools/bin/sdkmanager --list
+        displayName: 'List already installed Android packages'
+
+      - script: |
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-33;google_apis;x86_64'
+        displayName: 'Install Android image'
+
+      - script: |
+          $ANDROID_HOME/emulator/emulator -list-avds
+          echo '---'
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n test_android_emulator -k 'system-images;android-33;google_apis;x86_64' --force
+          echo '---'
+          $ANDROID_HOME/emulator/emulator -list-avds
+        displayName: 'Create AVD'
+
+      - script: |
+          $ANDROID_HOME/platform-tools/adb devices
+          echo '---'
+          nohup $ANDROID_HOME/emulator/emulator -avd test_android_emulator -no-snapshot > /dev/null 2>&1 & $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+          echo '---'
+          $ANDROID_HOME/platform-tools/adb devices -l | grep emulator-5554
+          $ANDROID_HOME/platform-tools/adb shell getprop
+        displayName: 'Start Android emulator'
