--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,10 @@ jobs:
       - script: |
           npm install -g appium
         displayName: 'appium'
-      -script: |
+      - script: |
            apt-get install -y at-spi2-core  libxkbcommon-x11-0  xorg xvfb
+        displayName: 'List already installed apt packages'
+
       - script: |
           $ANDROID_HOME/tools/bin/sdkmanager --list
         displayName: 'List already installed Android packages'
