--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
           versionSpec: '16.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium
+          npm install -g appium@next
         displayName: 'appium'
 
       - script: |
@@ -42,5 +42,5 @@ jobs:
         displayName: 'Start Android emulator'
       - task: katalonTask@1
         inputs:
-          version: '9.0.0'
+          version: '8.5.4'
           executeArgs: '-noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"'
