--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,10 @@ jobs:
 
       - task: NodeTool@0
         inputs:
-          versionSpec: '16.x'
+          versionSpec: '20.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium
+          npm install -g appium@1.22.3
         displayName: 'appium'
 
       - script: |
