--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
           versionSpec: '20.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium@2.0 --unsafe-perm=true --allow-root
+          npm install -g appium@next --unsafe-perm=true --allow-root
         displayName: 'appium'
 
       - script: |
@@ -21,13 +21,13 @@ jobs:
         displayName: 'List already installed Android packages'
 
       - script: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-33;google_apis;x86_64'
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-35;google_apis;x86_64'
         displayName: 'Install Android image'
 
       - script: |
           $ANDROID_HOME/emulator/emulator -list-avds
           echo '---'
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n test_android_emulator -k 'system-images;android-33;google_apis;x86_64' --force
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n test_android_emulator -k 'system-images;android-35;google_apis;x86_64' --force
           echo '---'
           $ANDROID_HOME/emulator/emulator -list-avds
         displayName: 'Create AVD'
