--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
         displayName: 'Install Node.js'
       - script: |
           npm install -g appium@1.16 --unsafe-perm=true --allow-root
+          appium driver install xcuites
           npm install -g appium-doctor
           appium-doctor
         displayName: 'appium'
