--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
         displayName: 'Install Node.js'
       - script: |
           npm install -g appium@2 --unsafe-perm=true --allow-root
-          appium driver install xcuites
+          appium driver install xcuitest
           npm install -g appium-doctor
           appium-doctor
         displayName: 'appium'
