--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,4 +54,6 @@ jobs:
       - task: katalonTask@1
         inputs:
           version: '9.1.0'
-          executeArgs: '-noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"'
+          executeArgs: '-noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Remote" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.system.server.port=0 -proxy.system.excludes="127.0.0.1" -proxy.auth.option=NO_PROXY -proxy.system.server.type=HTTP -proxy.system.option=NO_PROXY -proxy.system.option=MANUAL_CONFIG -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"'
+
+
