--- a/settings/internal/com.kms.katalon.core.mobile.android.properties
+++ b/settings/internal/com.kms.katalon.core.mobile.android.properties
@@ -1,2 +1,2 @@
 
-{"ANDROID_DRIVER":{"deviceName":"emulator-5554","platformName":"Android","platformVersion":"13","appWaitActivity","*"}}
+{"ANDROID_DRIVER":{"deviceName":"emulator-5554","platformName":"Android","platformVersion":"13","appWaitActivity":"*"}}
