--- a/console.properties
+++ b/console.properties
@@ -14,7 +14,7 @@ testOpsReleaseId=
 testcloudAppId=
 testOpsBuildId=
 qTestDestId=
-appiumDirectory=/Users/runner/hostedtoolcache/node/20.16.0/x64/bin/appium
+appiumDirectory=/usr/lib/node_modules/appium/
 qTestDestType=
 testcloudEnvironmentId=
 testcloudEnvironmentID=
