--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,10 +47,17 @@ jobs:
           echo '---'
           $ANDROID_HOME/emulator/emulator -list-avds
         displayName: 'Create AVD'
-      
+
+      - task: JavaToolInstaller@0
+        inputs:
+          versionSpec: '17'
+          jdkArchitectureOption: 'x64'
+          jdkSourceOption: 'PreInstalled'
+        displayName: 'Install java.js'
+        
       - script: |
-          export KATALON_JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/
-          export JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/
+          export KATALON_JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.12-7/x64/Contents/Home/
+          export JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.12-7/x64/Contents/Home/
           export APPIUM_HOME=/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium
           cp -R "/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/" "/Applications/Katalon Studio Engine.app/Contents/Eclipse/jre/Contents/Home/"
           $ANDROID_HOME/platform-tools/adb devices
